# EzPC-HawkEye

./: .gitignore  README-HawkEye.md  setup_env_and_build.sh
Athos/: .gitignore  CompileONNXGraph.py  CompileTFGraph.py  config.json  densemodel_60_sci_OT0.cpp  mobilemodel_60_sci_OT0.cpp  resmodel_60_sci_OT0.cpp  shufflemodel_60_sci_OT0.cpp
Athos/ONNXCompiler/: ONNXNodesAST.py
Athos/build_dir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run_hawkeye_experiments.sh
Athos/densenet121/: Makefile  cmake_install.cmake
Athos/mobilenet/: Makefile  cmake_install.cmake
Athos/resnet50/: Makefile  cmake_install.cmake
Athos/shufflenetV2/: Makefile  cmake_install.cmake
SCI/cmake/: SCIConfig.cmake
SCI/networks/: main_resnet50.cpp  main_sqnet.cpp
SCI/src/: defines_uniform.h  functionalities_uniform.h  globals.cpp  globals.h  library_fixed.cpp  library_fixed_uniform.cpp
SCI/src/LinearOT/: linear-ot.cpp
SCI/src/utils/: utils.hpp
SCI/tests/: test_field_maxpool.cpp  test_ring_hadamard_product.cpp  test_ring_matmul.cpp  test_ring_relu.cpp  test_ring_truncation.cpp
